tests/errors/robots/interaction/setsignal/setsignal_1.c
void main()
{
    setsignal(1, {1, 2}, {'A', 4});
}